--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "sass": "^1.63.6",
     "vue": "^3.2.47",
-    "vue-responsive-video-background-player": "^2.3.1"
+    "vue-responsive-video-background-player": "^2.3.1",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
